<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_statut_neighbour"
    android:layout_marginTop="20dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/Cardview_info"
            android:layout_width="394dp"
            android:layout_height="177dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewBorder"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextView2"
                    app:srcCompat="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/symbolPosition"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/Symbolposition"
                    android:tint="@color/colorAccent"
                    app:layout_constraintEnd_toStartOf="@id/positionTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewBorder"
                    app:srcCompat="@android:drawable/ic_menu_mylocation" />

                <ImageView
                    android:id="@+id/symbolPhone"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/Symbolphone"
                    android:tint="@color/colorAccent"
                    app:layout_constraintEnd_toStartOf="@id/numberTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/symbolPosition"
                    app:layout_constraintBottom_toTopOf="@id/symbolWeb"
                    app:srcCompat="@android:drawable/ic_menu_call" />

                <ImageView
                    android:id="@+id/symbolWeb"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="2dp"
                    android:paddingTop="5dp"
                    android:contentDescription="@string/Symbolweb"
                    app:srcCompat="@drawable/ic_web_icon_24dp"
                    android:tint="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@id/symbolPhone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/nameTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/numberTextView"
                    android:layout_width="350dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/symbolPhone"
                    app:layout_constraintTop_toBottomOf="@id/positionTextView" />

                <TextView
                    android:id="@+id/positionTextView"
                    android:layout_width="350dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/position"
                    app:layout_constraintBottom_toTopOf="@id/numberTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/symbolPosition"
                    app:layout_constraintTop_toBottomOf="@id/imageViewBorder"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/webTextView"
                    android:layout_width="350dp"
                    android:layout_height="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/socialmedia"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintStart_toEndOf="@id/symbolWeb"
                    app:layout_constraintTop_toBottomOf="@id/numberTextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Cardview_info">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/aboutTextView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/about_me"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageViewBorder2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aboutTextView"
                    app:srcCompat="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/resumeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/resume"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewBorder2" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>